--- a/web/src/app/backgroundjobs/BackgroundJobStyles.scss
+++ b/web/src/app/backgroundjobs/BackgroundJobStyles.scss
@@ -1,5 +1,11 @@
-.ui.celled.table {
+@import 'src/styles/global';
+.ui.celled.table tr {
     th {
-        background: #fff;
+        background: $theme-color;
+        border: 1px solid darken($theme-color, 5%);
+        color: white;
+        &:first-child {
+            border-left: 1px solid darken($theme-color, 5%);
+        }
     }
 }
