--- a/api/src/Box9.Leds.Pi.Api.WebHost/Visualizer/css/visualizer.css
+++ b/api/src/Box9.Leds.Pi.Api.WebHost/Visualizer/css/visualizer.css
@@ -2,4 +2,16 @@
     height: 15px;
     width: 15px;
     border-radius: 50%;
+    display: inline;
+    float: left;
+}
+
+.row {
+    height: 15px;
+    width: 100%;
+    background-color: grey;
+}
+
+.display {
+    margin-top: 15px;
 }
