--- a/web/src/app/home/workingproject/playback/PlaybackStyles.scss
+++ b/web/src/app/home/workingproject/playback/PlaybackStyles.scss
@@ -1,7 +1,9 @@
 .playback-device-loaded {
     background-color: #e5ffe8;
+    color: #21ba45;
 }
 
 .playback-device-not-loaded {
-    background-color: #ffe5e5;
+    background-color: #fff6f6;
+    color: #9f3a38;
 }
